# cmakeTemplateOpengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/src/: main.cpp
core/: CMakeLists.txt
core/include/: testcore.h
core/src/: testcore.cpp
